--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,12 @@
   <div class="max-w-2xl w-full mx-auto flex flex-col items-center">
     <h1 class="font-bold text-7xl text-indigo-100">Soundcloud</h1>
     <p class="text-lg text-gray-200">Share your music with the world!</p>
-   
+    <% if current_user %>
+      <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: "bg-purple-500 text-purple-100 p-2 rounded-lg w-32 text-center"
+        %>
+        
+    <% else %>
+      <%= link_to "Sign in", new_user_session_path, class: "bg-green-500 text-green-100 p-2 rounded-lg w-32 text-center" %>
+    <% end %>
   </div>
 </div>
