added stimulus and audio_player controllers and audio_preview on show page

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,7 +18,8 @@
 
   <div class="my-5">
     <%= form.label :description %>
-    <%= form.rich_text_area :description, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_area :description, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    
   </div>
 
   <div class="my-5">
@@ -31,6 +32,12 @@
     <%= form.file_field :audio, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
+   <div class="mb-4">   
+    <%= form.number_field :user_id, id: :task_user_id,
+     class: "text-center bg-gray-200 p-2 w-full border border-transparent rounded-md shadow-sm focus:outline-none focus:border-blue-500 focus:ring focus:ring-blue-200",
+     value: current_user.id, type: :hidden
+     %>
+  </div>
   <div class="inline">
     <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
   </div>
